Fix some spelling mistakes of docs.

--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -17,14 +17,14 @@
     "\n",
     "Since we need to transform the inner algorithm into the problem, it's crucial that the inner algorithm is parallelizable. Therefore, some modifications to the algorithm may be necessary.\n",
     "\n",
-    "To ensure the function is JIT-compilable, it must meet the conditions outlined in [JIT compoents](#/guide/developer/2-jit-able). In addition to these requirements, the algorithm must also satisfy the following two constraints:\n",
+    "To ensure the function is JIT-compilable, it must meet the conditions outlined in [JIT components](#/guide/developer/2-jit-able). In addition to these requirements, the algorithm must also satisfy the following two constraints:\n",
     "\n",
-    "1. The algorithm should have no methods with in-place operations on the attributes of the algotirhm itself.\n",
+    "1. The algorithm should have no methods with in-place operations on the attributes of the algorithm itself.\n",
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
     "    def __init__(self,...): \n",
-    "        self.pop = torch.rand(10,10) #attribute of the algotirhm itself\n",
+    "        self.pop = torch.rand(10,10) #attribute of the algorithm itself\n",
     "        pass\n",
     "\n",
     "    def step_in_place(self): # method with in-place operations\n",
@@ -95,7 +95,7 @@
    "source": [
     "## A simple example\n",
     "\n",
-    "Here, we'll demonstrate a simple example of how to use HPO with EvoX. We will use the [`PSO`](#PSO) algorithm to search for the optimal hyperparameters of a basic algorithm to solve the sphere problem.\n",
+    "Here, we'll demonstrate a simple example of how to use HPO with EvoX. We will use the [`PSO`](#PSO) algorithm to search for the optimal hyper-parameters of a basic algorithm to solve the sphere problem.\n",
     "\n",
     "First, let's import the necessary modules."
    ]
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can test whether the [`HPOProblemWrapper`](#HPOProblemWrapper) correctly recognizes the hyperparameters we defined. Since we have made no modifications to the hyperparameters for the 7 instances, they should be identical across all instances."
+    "We can test whether the [`HPOProblemWrapper`](#HPOProblemWrapper) correctly recognizes the hyper-parameters we defined. Since we have made no modifications to the hyper-parameters for the 7 instances, they should be identical across all instances."
    ]
   },
   {
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also specify our own set of hyperparameter values. Note that the number of hyperparameter sets must match the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). The custom hyperparameters should be provided as a dictionary whose values are wrapped in the [`Parameter`](#Parameter)."
+    "We can also specify our own set of hyperparameter values. Note that the number of hyperparameter sets must match the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). The custom hyper-parameters should be provided as a dictionary whose values are wrapped in the [`Parameter`](#Parameter)."
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we use the [`PSO`](#PSO) algorithm to optimize the hyperparameters of `ExampleAlgorithm`. Note that the population size of the [`PSO`](#PSO) must match the number of instances; otherwise, unexpected errors may occur. In this case, we need to transform the solution in the outer workflow, as the [`HPOProblemWrapper`](#HPOProblemWrapper) requires a dictionary as input."
+    "Now, we use the [`PSO`](#PSO) algorithm to optimize the hyper-parameters of `ExampleAlgorithm`. Note that the population size of the [`PSO`](#PSO) must match the number of instances; otherwise, unexpected errors may occur. In this case, we need to transform the solution in the outer workflow, as the [`HPOProblemWrapper`](#HPOProblemWrapper) requires a dictionary as input."
    ]
   },
   {
