--- a/docs/source/guide/user/3-hpo.ipynb
+++ b/docs/source/guide/user/3-hpo.ipynb
@@ -25,7 +25,7 @@
     ":align: center\n",
     "```\n",
     "\n",
-    "The key to deploying HPO with EvoX is to transform the [`workflows`](#evox.workflows) into [`problems`](#evox.problems) using the [`HPOProblemWrapper`](#HPOProblemWrapper). Once transformed, we can treat the [`workflows`](#evox.workflows) as standard [`problems`](#evox.problems). The input to the 'HPO problem' consists of the hyperparameters, and the output is the evaluation metrics."
+    "The key to deploying HPO with EvoX is to transform the [`workflows`](#evox.workflows) into [`problems`](#evox.problems) using the [`HPOProblemWrapper`](#HPOProblemWrapper). Once transformed, we can treat the [`workflows`](#evox.workflows) as standard [`problems`](#evox.problems). The input to the 'HPO problem' consists of the hyper-parameters, and the output is the evaluation metrics."
    ]
   },
   {
@@ -34,12 +34,12 @@
    "source": [
     "## The Key Component -- `HPOProblemWrapper`\n",
     "\n",
-    "To ensure the [`HPOProblemWrapper`](#HPOProblemWrapper) recognizes the hyperparameters, we need to wrap them using [`Parameter`](#Parameter). With this straightforward step, the hyperparameters will be automatically identified.\n",
+    "To ensure the [`HPOProblemWrapper`](#HPOProblemWrapper) recognizes the hyper-parameters, we need to wrap them using [`Parameter`](#Parameter). With this straightforward step, the hyper-parameters will be automatically identified.\n",
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
     "    def __init__(self,...): \n",
-    "        self.omega = Parameter([1.0, 2.0]) # wrap the hyperparameters with `Parameter`\n",
+    "        self.omega = Parameter([1.0, 2.0]) # wrap the hyper-parameters with `Parameter`\n",
     "        self.beta = Parameter(0.1)\n",
     "        pass\n",
     "\n",
@@ -66,7 +66,7 @@
    "source": [
     "## A simple example\n",
     "\n",
-    "Here, we'll demonstrate a simple example of using EvoX for HPO. Specifically, we will use the [PSO](#PSO) algorithm to optimize the hyperparameters of the [PSO](#PSO) algorithm for solving the sphere problem.\n",
+    "Here, we'll demonstrate a simple example of using EvoX for HPO. Specifically, we will use the [PSO](#PSO) algorithm to optimize the hyper-parameters of the [PSO](#PSO) algorithm for solving the sphere problem.\n",
     "\n",
     "Please note that this chapter provides only a brief overview of HPO deployment. For a more detailed guide, refer to [Deploy HPO with Custom Algorithms](#/guide/developer/custom_hpo_prob).\n",
     "\n",
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define a simple sphere problem."
+    "Next, we define a simple Sphere problem."
    ]
   },
   {
@@ -138,12 +138,12 @@
    "metadata": {},
    "source": [
     "The [`HPOProblemWrapper`](#HPOProblemWrapper) takes 4 arguments:\n",
-    "1. iterations: The number of iterations to be executed in the optimization process.\n",
-    "2. num_instances: The number of instances to be executed in parallel in the optimization process.\n",
-    "3. workflow: The workflow to be used in the optimization process. Must be wrapped by [`jit_class`](#jit_class).\n",
-    "4. copy_init_state: Whether to copy the initial state of the workflow for each evaluation. Defaults to `True`. If your workflow contains operations that IN-PLACE modify the tensor(s) in initial state, this should be set to `True`. Otherwise, you can set it to `False` to save memory.\n",
+    "1. `iterations`: The number of iterations to be executed in the optimization process.\n",
+    "2. `num_instances`: The number of instances to be executed in parallel in the optimization process.\n",
+    "3. `workflow`: The workflow to be used in the optimization process. Must be wrapped by [`jit_class`](#jit_class).\n",
+    "4. `copy_init_state`: Whether to copy the initial state of the workflow for each evaluation. Defaults to `True`. If your workflow contains operations that IN-PLACE modify the tensor(s) in initial state, this should be set to `True`. Otherwise, you can set it to `False` to save memory.\n",
     "\n",
-    "We can verify whether the [`HPOProblemWrapper`](#HPOProblemWrapper) correctly recognizes the hyperparameters we define. Since no modifications are made to the hyperparameters across the 5 instances, they should remain identical for all instances."
+    "We can verify whether the [`HPOProblemWrapper`](#HPOProblemWrapper) correctly recognizes the hyper-parameters we define. Since no modifications are made to the hyper-parameters across the 5 instances, they should remain identical for all instances."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also define a custom set of hyperparameter values. It is important to ensure that the number of hyperparameter sets matches the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). Additionally, custom hyperparameters must be provided as a dictionary whose values are wrapped using the [`Parameter`](#Parameter)."
+    "We can also define a custom set of hyperparameter values. It is important to ensure that the number of hyperparameter sets matches the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). Additionally, custom hyper-parameters must be provided as a dictionary whose values are wrapped using the [`Parameter`](#Parameter)."
    ]
   },
   {
