Update supervised-learning neuroevolution examples for documentation.

--- a/docs/source/example/supervised-learning.ipynb
+++ b/docs/source/example/supervised-learning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EvoX provides solutions for supervised learning tasks based on neuroevolution, with key modules including `SupervisedLearningProblem` and `ParamsAndVector`. Taking the MNIST classification task as an example, this section illustrates the neuroevolution process for supervised learning by adopting the modules of EvoX."
+    "EvoX provides solutions for supervised learning tasks based on neuroevolution, with key modules including [`SupervisedLearningProblem`](#evox.problems.neuroevolution.SupervisedLearningProblem) and [`ParamsAndVector`](#evox.utils.parameters_and_vector.ParamsAndVector). Taking the MNIST classification task as an example, this section illustrates the neuroevolution process for supervised learning by adopting the modules of EvoX."
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset setting implies the selection of the task. The data loader now needs to be initialized based on PyTorch's built-in support.\n",
+    "Setting dataset implies the selection of the task. The data loader now needs to be initialized based on PyTorch's built-in support.\n",
     "Here, the package `torchvision` must be installed in advance depending on your PyTorch version, if it is not already available.\n",
     "\n",
     "In case the MNIST dataset is not already present in the `data_root` directory, the `download=True` flag is set to ensure that the dataset will be automatically downloaded. Therefore, the setup may take some time during the first run."
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gradient Descent Training"
+    "## Gradient Descent Training (Optional)"
    ]
   },
   {
@@ -415,7 +415,7 @@
    "source": [
     "Based on the pre-trained model from the previous gradient descent process, neuroevolution is progressively applied to fine-tune the model.\n",
     "\n",
-    "First, the `ParamsAndVector` component is used to flatten the weights of the pre-trained model into a vector, which serves as the initial center individual for the subsequent neuroevolution process."
+    "First, the [`ParamsAndVector`](#evox.utils.parameters_and_vector.ParamsAndVector) component is used to flatten the weights of the pre-trained model into a vector, which serves as the initial center individual for the subsequent neuroevolution process."
    ]
   },
   {
@@ -429,6 +429,13 @@
     "pop_center = adapter.to_vector(model_params)\n",
     "lower_bound = pop_center - 0.01\n",
     "upper_bound = pop_center + 0.01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> In case of algorithms specifically designed for neuroevolution, which can directly accept a dictionary of batched parameters as input, the usage of [`ParamsAndVector`](#evox.utils.parameters_and_vector.ParamsAndVector) can be unnecessary."
    ]
   },
   {
@@ -533,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example, the population-based algorithm for neuroevolution is tested first, using Particle Swarm Optimization (PSO) as a representation. The configuration for neuroevolution is similar to that of other optimization tasks &ndash; we need to define the problem, algorithm, monitor, and workflow, along with their respective `setup()` functions to complete the initialization.\n",
+    "In this example, the population-based algorithm for neuroevolution is tested first, using Particle Swarm Optimization ([PSO](#evox.algorithms.pso_variants.PSO)) as a representation. The configuration for neuroevolution is similar to that of other optimization tasks &ndash; we need to define the problem, algorithm, monitor, and workflow, along with their respective `setup()` functions to complete the initialization.\n",
     "\n",
     "A key point to note here is that the population size (`POP_SIZE` in this case) needs to be initialized in **both the problem and the algorithm** to avoid potential errors."
    ]
@@ -632,7 +639,7 @@
    "source": [
     "Next, the single-individual algorithm based neuroevolution is tested. Similar to the population-based case, we need to define the problem, algorithm, monitor, and workflow, and call their respective `setup()` functions during initialization. In this case, a random search strategy is selected as the algorithm.\n",
     "\n",
-    "A key point to note here is that `SupervisedLearningProblem` should be set with `pop_size=None`, and `EvalMonitor` should have `topk=1`, as only a single individual is being searched. A careful hyper-parameter setup helps avoid unnecessary issues."
+    "A key point to note here is that [`SupervisedLearningProblem`](#evox.problems.neuroevolution.SupervisedLearningProblem) should be set with `pop_size=None`, and [`EvalMonitor`](#evox.workflows.EvalMonitor) should have `topk=1`, as only a single individual is being searched. A careful hyper-parameter setup helps avoid unnecessary issues."
    ]
   },
   {
