Update Ruff-formatted jit-vmap and supervised-learning tutorial documents.

--- a/docs/source/example/supervised-learning.ipynb
+++ b/docs/source/example/supervised-learning.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +99,7 @@
     "        x = self.features(x)\n",
     "        x = self.classifier(x)\n",
     "        return x\n",
+    "\n",
     "\n",
     "model = SampleCNN().to(device)\n",
     "\n",
@@ -224,7 +225,7 @@
     "import torchvision\n",
     "\n",
     "\n",
-    "data_root = \"./data\" # Choose a path to save dataset\n",
+    "data_root = \"./data\"  # Choose a path to save dataset\n",
     "os.makedirs(data_root, exist_ok=True)\n",
     "train_dataset = torchvision.datasets.MNIST(\n",
     "    root=data_root,\n",
@@ -271,23 +272,21 @@
    "outputs": [],
    "source": [
     "# Used for gradient descent training process\n",
-    "pre_gd_train_loader = tuple([\n",
-    "    (inputs.to(device), labels.to(device)) for inputs, labels in train_loader\n",
-    "])\n",
+    "pre_gd_train_loader = tuple([(inputs.to(device), labels.to(device)) for inputs, labels in train_loader])\n",
     "\n",
     "# Used for neuroevolution fine-tuning process\n",
-    "pre_ne_train_loader = tuple([\n",
-    "    (\n",
-    "        inputs.to(device),\n",
-    "        labels.type(torch.float).unsqueeze(1).repeat(1, 10).to(device),\n",
-    "    )\n",
-    "    for inputs, labels in train_loader\n",
-    "])\n",
+    "pre_ne_train_loader = tuple(\n",
+    "    [\n",
+    "        (\n",
+    "            inputs.to(device),\n",
+    "            labels.type(torch.float).unsqueeze(1).repeat(1, 10).to(device),\n",
+    "        )\n",
+    "        for inputs, labels in train_loader\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "# Used for model testing process\n",
-    "pre_test_loader = tuple([\n",
-    "    (inputs.to(device), labels.to(device)) for inputs, labels in test_loader\n",
-    "])"
+    "pre_test_loader = tuple([(inputs.to(device), labels.to(device)) for inputs, labels in test_loader])"
    ]
   },
   {
@@ -366,7 +365,7 @@
     "\n",
     "            running_loss += loss.item()\n",
     "            if print_frequent > 0 and step % print_frequent == 0:\n",
-    "                print(f\"[Epoch {epoch:2d}, step {step:4d}] \" f\"running loss: {running_loss:.4f} \")\n",
+    "                print(f\"[Epoch {epoch:2d}, step {step:4d}] running loss: {running_loss:.4f} \")\n",
     "                running_loss = 0.0\n",
     "    return model"
    ]
@@ -462,6 +461,7 @@
     "        fitness = -correct\n",
     "        return fitness\n",
     "\n",
+    "\n",
     "acc_criterion = AccuracyCriterion(pre_ne_train_loader)\n",
     "loss_criterion = nn.MSELoss()\n",
     "\n",
@@ -505,12 +505,12 @@
     "\n",
     "\n",
     "def neuroevolution_process(\n",
-    "    workflow: StdWorkflow, \n",
-    "    adapter: ParamsAndVector, \n",
-    "    model: nn.Module, \n",
-    "    test_loader: torch.utils.data.DataLoader, \n",
-    "    device: torch.device, \n",
-    "    best_acc: float, \n",
+    "    workflow: StdWorkflow,\n",
+    "    adapter: ParamsAndVector,\n",
+    "    model: nn.Module,\n",
+    "    test_loader: torch.utils.data.DataLoader,\n",
+    "    device: torch.device,\n",
+    "    best_acc: float,\n",
     "    max_generation: int = 2,\n",
     ") -> None:\n",
     "    for index in range(max_generation):\n",
@@ -611,10 +611,7 @@
     }
    ],
    "source": [
-    "print(\n",
-    "    \"Upon gradient descent, \"\n",
-    "    \"the population-based neuroevolution process start. \"\n",
-    ")\n",
+    "print(\"Upon gradient descent, the population-based neuroevolution process start. \")\n",
     "neuroevolution_process(\n",
     "    workflow=pop_workflow,\n",
     "    adapter=adapter,\n",
@@ -657,14 +654,13 @@
     ")\n",
     "single_problem.setup()\n",
     "\n",
+    "\n",
     "@jit_class\n",
     "class RandAlgorithm(Algorithm):\n",
     "    def __init__(self, lb, ub):\n",
     "        super().__init__()\n",
-    "        assert lb.ndim == 1 and ub.ndim == 1, (\n",
-    "            f\"Lower and upper bounds shall have ndim of 1, \" f\"got {lb.ndim} and {ub.ndim}. \"\n",
-    "        )\n",
-    "        assert lb.shape == ub.shape, f\"Lower and upper bounds shall have same shape, \" f\"got {lb.ndim} and {ub.ndim}. \"\n",
+    "        assert lb.ndim == 1 and ub.ndim == 1, f\"Lower and upper bounds shall have ndim of 1, got {lb.ndim} and {ub.ndim}. \"\n",
+    "        assert lb.shape == ub.shape, f\"Lower and upper bounds shall have same shape, got {lb.ndim} and {ub.ndim}. \"\n",
     "        self.hp = Parameter([1.0, 2.0])\n",
     "        self.lb = lb\n",
     "        self.ub = ub\n",
@@ -682,6 +678,8 @@
     "        pop = pop * self.hp[0]\n",
     "        self.pop.copy_(pop)\n",
     "        self.fit.copy_(self.evaluate(pop))\n",
+    "\n",
+    "\n",
     "single_algorithm = RandAlgorithm(lb=lower_bound, ub=upper_bound)\n",
     "\n",
     "single_monitor = EvalMonitor(\n",
@@ -702,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -762,10 +760,7 @@
     }
    ],
    "source": [
-    "print(\n",
-    "    \"Upon gradient descent, \"\n",
-    "    \"the single-individual neuroevolution process start. \"\n",
-    ")\n",
+    "print(\"Upon gradient descent, the single-individual neuroevolution process start. \")\n",
     "neuroevolution_process(\n",
     "    workflow=single_workflow,\n",
     "    adapter=adapter,\n",
