--- a/docs/source/guide/developer/2-jit-vmap-tutorial.ipynb
+++ b/docs/source/guide/developer/2-jit-vmap-tutorial.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,8 @@
     "\n",
     "def dummy_evaluation(pop_x: torch.Tensor, y: torch.Tensor):\n",
     "    return pop_x * y\n",
+    "\n",
+    "\n",
     "batched_dummy_evaluation = torch.vmap(dummy_evaluation, (0, None))\n",
     "\n",
     "population_size = 3\n",
@@ -109,9 +111,7 @@
     }
    ],
    "source": [
-    "traced_vmap_func = torch.jit.trace(vmap_sample_func,\n",
-    "    example_inputs=(pop_x, y),\n",
-    ")\n",
+    "traced_vmap_func = torch.jit.trace(vmap_sample_func, example_inputs=(pop_x, y))\n",
     "print(traced_vmap_func.code)"
    ]
   },
@@ -154,9 +154,7 @@
     }
    ],
    "source": [
-    "scripted_vmap_func = torch.jit.script(vmap_sample_func,\n",
-    "    example_inputs=(pop_x, y),\n",
-    ")\n",
+    "scripted_vmap_func = torch.jit.script(vmap_sample_func, example_inputs=(pop_x, y))\n",
     "print(scripted_vmap_func.code)"
    ]
   },
