--- a/docs/source/guide/developer/2-jit-vmap-tutorial.ipynb
+++ b/docs/source/guide/developer/2-jit-vmap-tutorial.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Basic Optimization Support for Functions in PyTorch\n",
     "\n",
-    "PyTorch provides fundamental optimization support for functions, primarily through vectorizing map operations and Just-In-Time (JIT) compilation. These techniques enable efficient batch processing and enhance execution performance, respectively. Introductions of these optimizations are provided in the following sections."
+    "PyTorch provides fundamental optimization support for functions, primarily through vectorizing map (vmap) operations and Just-In-Time (JIT) compilation. These techniques enable efficient batch processing and enhance execution performance, respectively. Introductions of these optimizations are provided in the following sections."
    ]
   },
   {
@@ -22,12 +22,12 @@
    "source": [
     "### Batch Processing Support through Vectorizing Map in PyTorch\n",
     "\n",
-    "Vectorizing map, implemented in PyTorch as torch.vmap, is a powerful tool that takes callable functions and returns a new and enhanced version. According to a specified strategy, this new function vectorizes the operations of the original one, which facilitates efficient batch processing. In EvoX, for example, this feature plays a crucial role in population-based evolutionary processes."
+    "Vectorizing map, implemented in PyTorch as [`torch.vmap`](https://pytorch.org/docs/stable/generated/torch.vmap.html), is a powerful tool that takes a callable function and returns a batched version of it. According to specified strategy, this new function vectorizes the operations of the original one, which facilitates efficient batch processing. In EvoX, for example, this feature plays a crucial role in hyperparameter optimization (HPO)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
    "source": [
     "### Just-In-Time (JIT) Support in PyTorch\n",
     "\n",
-    "In PyTorch, `torch.jit.trace` and `torch.jit.script` provide two distinct types of JIT tools, supporting function performance optimization through tracing and scripting, respectively.\n",
+    "In PyTorch, [`torch.jit.trace`](https://pytorch.org/docs/stable/generated/torch.jit.trace.html) and [`torch.jit.script`](https://pytorch.org/docs/stable/generated/torch.jit.script.html) provide two distinct types of JIT tools, supporting function performance optimization through tracing and scripting, respectively.\n",
     "\n",
     "Based on the tracing strategy, the `torch.jit.trace` method offers higher parsing speed and broader compatibility, such as with `torch.vmap` operations. Although it provides excellent support for simple functions, it is not suitable for complex tasks involving dynamic if-else branches and loop control flows."
    ]
@@ -119,6 +119,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "However, dynamic python control-flow cannot be traced correctly and a warning will be raised:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def dynamic_control_flow(pop_x: Tensor,\n",
+      "    y: Tensor) -> Tensor:\n",
+      "  y0 = torch.flatten(y)\n",
+      "  _0 = torch.slice(torch.unsqueeze(y0, 0), 1, 0, 9223372036854775807)\n",
+      "  return torch.mul(pop_x, _0)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\skk77\\AppData\\Local\\Temp\\ipykernel_19564\\349648791.py:2: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
+      "  if y.flatten()[0] > 0:\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dynamic_control_flow(pop_x: torch.Tensor, y: torch.Tensor):\n",
+    "    if y.flatten()[0] > 0:\n",
+    "        return pop_x + y[None, :]\n",
+    "    else:\n",
+    "        return pop_x * y[None, :]\n",
+    "\n",
+    "traced_dynamic_control_flow_func = torch.jit.trace(dynamic_control_flow, example_inputs=(pop_x, y))\n",
+    "print(traced_dynamic_control_flow_func.code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Alternatively, the `torch.jit.script` method, which adopts a scripting strategy, is better suited for complex tasks that involve dynamic control flows but has limited compatibility."
    ]
   },
@@ -131,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -143,19 +187,61 @@
       "  return torch.add(torch.sum(x), y)\n",
       "\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "scripted_vmap_func = torch.jit.script(vmap_sample_func)\n",
+    "print(scripted_vmap_func.code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yet, it can correctly deal with complex dynamic python control flow:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/root/env_evoxtorch/lib/python3.12/site-packages/torch/jit/_script.py:1139: UserWarning: Warning: monkeytype is not installed. Please install https://github.com/Instagram/MonkeyType to enable Profile-Directed Typing in TorchScript. Refer to https://github.com/Instagram/MonkeyType/blob/master/README.rst to install MonkeyType. \n",
-      "  warnings.warn(\n"
+      "def dynamic_control_flow(pop_x: Tensor,\n",
+      "    y: Tensor) -> Tensor:\n",
+      "  _0 = torch.gt(torch.select(torch.flatten(y), 0, 0), 0)\n",
+      "  if bool(_0):\n",
+      "    _2 = torch.slice(torch.unsqueeze(y, 0), 1)\n",
+      "    _1 = torch.add(pop_x, _2)\n",
+      "  else:\n",
+      "    _3 = torch.slice(torch.unsqueeze(y, 0), 1)\n",
+      "    _1 = torch.mul(pop_x, _3)\n",
+      "  return _1\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "scripted_vmap_func = torch.jit.script(vmap_sample_func, example_inputs=(pop_x, y))\n",
-    "print(scripted_vmap_func.code)"
+    "def dynamic_control_flow(pop_x: torch.Tensor, y: torch.Tensor):\n",
+    "    if y.flatten()[0] > 0:\n",
+    "        return pop_x + y[None, :]\n",
+    "    else:\n",
+    "        return pop_x * y[None, :]\n",
+    "\n",
+    "script_dynamic_control_flow_func = torch.jit.script(dynamic_control_flow)\n",
+    "print(script_dynamic_control_flow_func.code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "`torch.jit.script` relies on type hint to work properly. For example, any unannotated input argument is treated as a `torch.Tensor` while you can annotate some input arguments to be python types to make `torch.jit.script` work as intended.\n",
+    "```"
    ]
   },
   {
@@ -166,22 +252,13 @@
     "\n",
     "Based on the introductions above, when `torch.jit.trace` and `torch.jit.script` are used in combination with `torch.vmap`, coordination is required due to compatibility considerations.\n",
     "\n",
-    "The figure below illustrates the relationship between `torch.jit.script`, `torch.jit.trace`, and `torch.vmap`, highlighting their mutual invocation paths. If module A invokes module B, it implies that B can be called by A."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"text-align: center;\">\n",
-    "    <img src=\"../../_static/jit_vmap.png\" alt=\"jit introduction\" style=\"width: 400px\"/>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The figure below illustrates the relationship between `torch.jit.script`, `torch.jit.trace`, and `torch.vmap`, highlighting their mutual invocation paths. If module A invokes module B, it implies that B can be called by A.\n",
+    "\n",
+    "```{image} /_static/jit_vmap.png\n",
+    ":alt: JIT introduction\n",
+    ":align: center\n",
+    "```\n",
+    "\n",
     "For detailed usage of JIT and vectorizing map on PyTorch, please refer to the official PyTorch documentation for [TorchScript](#https://pytorch.org/docs/stable/jit.html) and [`torch.vmap`](#https://pytorch.org/docs/stable/generated/torch.vmap.html)."
    ]
   },
@@ -428,14 +505,14 @@
     "\n",
     "    # Use `torch.jit.ignore` to disable JIT and leave this function as Python callback\n",
     "    @torch.jit.ignore\n",
-    "    def not_automatically_JIT__func2(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "    def no_JIT_func2(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        # you can implement pure Python logic here\n",
     "        pass\n",
     "\n",
     "    # JIT functions can invoke other JIT functions as well as non-JIT functions\n",
     "    def automatically_JIT_func3(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        y = self.func1(x)\n",
-    "        z = self.func2(x)\n",
+    "        y = self.automatically_JIT_func1(x)\n",
+    "        z = self.no_JIT_func2(x)\n",
     "        pass\n",
     "    \n",
     "    ...\n",
@@ -464,15 +541,12 @@
     "from evox.core import ModuleBase, jit, vmap\n",
     "\n",
     "\n",
-    "# One example of the JIT vmapped method defined outside the module\n",
-    "@jit\n",
-    "def external_vmap_func(x: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
-    "    \n",
-    "    # The method to be vmapped\n",
-    "    def external_func(x: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
-    "    \treturn x + y\n",
-    "    \n",
-    "    return vmap(external_func, in_dims=1, out_dims=1, trace=False)(x, y)\n",
+    "# The method to be vmapped\n",
+    "def external_func(x: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
+    "    return x + y.sum()\n",
+    "\n",
+    "external_vmap_func = vmap(external_func, in_dims=1, out_dims=1)\n",
+    "\n",
     "\n",
     "# Set an module inherited from the ModuleBase class\n",
     "class ExampleModule(ModuleBase):\n",
@@ -513,6 +587,7 @@
     "# Import the ModuleBase class from EvoX\n",
     "from evox.core import ModuleBase, jit, vmap, trace_impl\n",
     "\n",
+    "\n",
     "# Set an module inherited from the ModuleBase class\n",
     "class ExampleModule(ModuleBase):\n",
     "    \n",
@@ -525,7 +600,7 @@
     "        # The original method\n",
     "        # We can not vmap it\n",
     "    \tdef func(x: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
-    "    \t\treturn x+y\n",
+    "    \t\treturn x + y\n",
     "        \n",
     "        \n",
     "        # The method to be vmapped\n",
@@ -555,7 +630,7 @@
     "\n",
     "A typical characteristic of such problems is that only certain parts of the algorithm need modification—for instance, the `step` method of an algorithm. This allows you to avoid rewriting the entire algorithm. In such cases, you can use the `@trace_impl` or `@vmap_impl` decorator to rewrite the function as a trace-JIT-time or vmap-JIT-time proxy for the specified `target` method.\n",
     "\n",
-    "The decorators [`@trace_impl`](#trace_impl) and [`@vmap_impl`](#vmap_impl) accept a single input parameter: the target method invoked when not tracing JIT. These decorators are applicable only to member methods within a `jit_class`.\n",
+    "The decorators [`@trace_impl`](#trace_impl) and [`@vmap_impl`](#vmap_impl) accept a single input parameter: the target method invoked when not tracing/vmapping JIT. These decorators are applicable **only** to member methods within a `jit_class`.\n",
     "\n",
     "Since the annotated function serves as a rewritten version of the target function, it must maintain identical input/output signatures (e.g., number and types of arguments). Otherwise, the resulting behavior is undefined.\n",
     "\n",
@@ -578,35 +653,6 @@
     "\n",
     "2. **Avoid Python Control Flow:**\n",
     "   The code logic must not rely on Python control flow structures. To handle Python control flow, use [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile), and [`TracingSwitch`](#TracingSwitch).\n",
-    "\n",
-    "```python\n",
-    "class ExampleAlgorithm(Algorithm):\n",
-    "    def __init__(self, ...):\n",
-    "        self.pop = torch.rand(10, 10)\n",
-    "\n",
-    "    def plus(self, y):\n",
-    "        self.pop += y\n",
-    "\n",
-    "    def minus(self, y):\n",
-    "        self.pop -= y\n",
-    "\n",
-    "    def step_with_python_control_flow(self, y):  # Function with Python control flow\n",
-    "        x = torch.rand()\n",
-    "        if x > 0.5:\n",
-    "            self.plus(y)\n",
-    "        else:\n",
-    "            self.minus(y)\n",
-    "\n",
-    "    def step_without_python_control_flow(self, y):  # Function without Python control flow\n",
-    "        x = torch.rand()\n",
-    "        cond = x > 0.5\n",
-    "        _if_else_ = TracingCond(self.plus, self.minus)\n",
-    "        _if_else_.cond(cond, y)\n",
-    "        self.pop = pop\n",
-    "```\n",
-    "\n",
-    "3. **Avoid In-Place Operations on `self`:**\n",
-    "   In-place operations on `self` are not well-defined and cannot be compiled. Since, in tracing mode, variables outside the method may be incorrectly interpreted as static variables, use state to track them.\n",
     "\n",
     "```python\n",
     "@jit_class\n",
@@ -650,8 +696,13 @@
     "        pop = pop * self.hp[0]\n",
     "        control_number = torch.rand()\n",
     "        cond = control_number < 0.5\n",
-    "        _if_else_ = TracingCond(cond)\n",
+    "        _if_else_ = TracingCond(lambda p: p * p, lambda p: p + p)  # No need to track self.pop\n",
+    "        pop = _if_else_.cond(cond, pop)\n",
+    "        self.pop = pop\n",
     "```\n",
+    "\n",
+    "3. **Avoid In-Place Operations on `self`:**\n",
+    "   Vectorized map in-place operations on `self` are not well-defined and cannot be compiled. Even if it is compiled successfully, you can still silently get incorrect results.\n",
     "\n",
     "### Using `use_state`\n",
     "\n",
@@ -702,10 +753,7 @@
     "\n",
     "### Using `core._vmap_fix`\n",
     "\n",
-    "The module [`_vmap_fix`](#_vmap_fix) provides useful functions. After the automatic import, `_vmap_fix` enables `torch.vmap` to be correctly traced by `torch.jit.trace`, while resolving issues such as random number handling that couldn't be properly traced during the `vmap` process. It also provides the `debug_print` function, which allows dynamic printing of Tensor values during both `vmap` and tracing.For example:\n",
-    "\n",
-    "- [`batched_random`](#batched_random) generates a batched tensor of random values by applying the given function to the size extended with the current vmap batch size.\n",
-    "- [`align_vmap_tensor`](#align_vmap_tensor) aligns a tensor with the batching dimensions of a current batched tensor.\n",
+    "The module [`_vmap_fix`](#_vmap_fix) provides useful functions. After the automatic import, `_vmap_fix` enables `torch.vmap` to be correctly traced by `torch.jit.trace`, while resolving issues such as random number handling that couldn't be properly traced during the `vmap` process. It also provides the `debug_print` function, which allows dynamic printing of Tensor values during both `vmap` and tracing.\n",
     "\n",
     "Detailed information can be found in the [`_vmap_fix`](#_vmap_fix) documentation.\n"
    ]
@@ -713,7 +761,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_evoxtorch",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
