Fix some mistakes inside the JIT doc.

--- a/docs/source/guide/developer/2-jit-vmap-tutorial.ipynb
+++ b/docs/source/guide/developer/2-jit-vmap-tutorial.ipynb
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [`jit_class`](#evox.core.module.jit_class) function"
+    "#### [`jit_class`](#evox.core.module.jit_class) Function"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### [`vmap`](#evox.core.jit_util.vmap) function"
+    "#### [`vmap`](#evox.core.jit_util.vmap) Function"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [`jit`](#evox.core.jit_util.jit) function"
+    "#### [`jit`](#evox.core.jit_util.jit) Function"
    ]
   },
   {
@@ -345,14 +345,14 @@
     "2. With `trace=False`, `torch.jit.script` cannot contain `vmap` expressions directly, please wrap them with `jit(..., trace=True)` or `torch.jit.trace`.\n",
     "```\n",
     "\n",
-    "In the [Working with Module in EvoX](#/guide/developer/1-modulebase), we have briefly introduced some rules about the methods inside a subclass of the [`ModuleBase`](#evox.core.module.ModuleBase) . Now that [`jit_class`](#evox.core.module.jit_class), [`vmap`](#evox.core.jit_util.vmap) and [`jit`](#evox.core.jit_util.jit) have been explained,  we will explain more rules and provide some specific hints."
+    "In the [Working with Module in EvoX](#/guide/developer/1-modulebase), we have briefly introduced some rules about the methods inside a subclass of the [`ModuleBase`](#evox.core.module.ModuleBase) . Now that [`jit_class`](#evox.core.module.jit_class), [`vmap`](#evox.core.jit_util.vmap) and [`jit`](#evox.core.jit_util.jit) have been explained, we will explain more rules and provide some specific hints."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Definition of static methods inside the subclass"
+    "#### Definition of Static Methods Inside the Subclass"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Definition of non-static methods inside the subclass"
+    "#### Definition of Non-static Methods Inside the Subclass"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Invocation of external methods inside the subclass"
+    "#### Invocation of External Methods Inside the Subclass"
    ]
   },
   {
@@ -478,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Automatically JIT for the subclass used with `jit_class`"
+    "#### Automatically JIT for the Subclass Used with `jit_class`"
    ]
   },
   {
@@ -524,14 +524,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Invocation of external vmapped methods inside the subclass"
+    "#### Invocation of External Vmap-wrapped Methods Inside the Subclass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inside the subclass, external vmapped methods can be invocated by the class methods to be JIT:\n",
+    "Inside the subclass, external vmap-wrapped methods can be invocated by the class methods to be JIT:\n",
     "\n",
     "```Python\n",
     "# Import Pytorch\n",
@@ -541,7 +541,7 @@
     "from evox.core import ModuleBase, jit, vmap\n",
     "\n",
     "\n",
-    "# The method to be vmapped\n",
+    "# The method to be vmap-wrapped\n",
     "def external_func(x: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
     "    return x + y.sum()\n",
     "\n",
@@ -563,7 +563,7 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "If method A invokes vmapped method B, then A and all methods invoke method A can not be vmapped again.\n",
+    "If method A invokes vmap-wrapped method B, then A and all methods invoke method A can not be vmap-wrapped again.\n",
     "```"
    ]
   },
@@ -571,14 +571,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Internal vmapped methods inside the subclass"
+    "#### Internal Vmap-wrapped Methods Inside the Subclass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inside the subclass, internal vmapped methods can be  JIT by using the [`trace_impl`](#evox.core.module.trace_impl):\n",
+    "Inside the subclass, internal vmap-wrapped methods can be  JIT by using the [`trace_impl`](#evox.core.module.trace_impl):\n",
     "\n",
     "```Python\n",
     "# Import Pytorch\n",
@@ -593,7 +593,7 @@
     "    \n",
     "    ...    \n",
     "    \n",
-    "    # The internal vmapped class method to be JIT   \n",
+    "    # The internal vmap-wrapped class method to be JIT   \n",
     "    @jit\n",
     "    def jit_vmap_func(self, p: torch.Tensor) -> torch.Tensor:\n",
     "        \n",
@@ -603,7 +603,7 @@
     "    \t\treturn x + y\n",
     "        \n",
     "        \n",
-    "        # The method to be vmapped\n",
+    "        # The method to be vmap-wrapped\n",
     "        # We need to use trace_impl to rewrite the original method\n",
     "        @trace_impl(func)\n",
     "    \tdef trace_func(x: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
