Add monitor.plot step in the example

--- a/docs/source/example/moalg.ipynb
+++ b/docs/source/example/moalg.ipynb
@@ -16,18 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import torch\n",
-    "from torch.profiler import ProfilerActivity, profile\n",
     "\n",
     "from evox.algorithms import RVEA\n",
     "from evox.metrics import igd\n",
     "from evox.problems.numerical import DTLZ2\n",
-    "from evox.workflows import StdWorkflow"
+    "from evox.workflows import StdWorkflow, EvalMonitor"
    ]
   },
   {
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +74,9 @@
     "prob = DTLZ2(m=3)\n",
     "pf = prob.pf()\n",
     "algo = RVEA(pop_size=100, n_objs=3, lb=-torch.zeros(12), ub=torch.ones(12))\n",
+    "monitor = EvalMonitor()\n",
     "workflow = StdWorkflow()\n",
-    "workflow.setup(algo, prob)\n",
+    "workflow.setup(algo, prob, monitor)\n",
     "workflow.init_step()"
    ]
   },
@@ -89,45 +89,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/py_3.10/lib/python3.10/site-packages/torch/functional.py:1478: UserWarning: Attempting to use hipBLASLt on an unsupported architecture! Overriding blas backend to hipblas (Triggered internally at ../aten/src/ATen/Context.cpp:296.)\n",
+      "  return _VF.cdist(x1, x2, p, None)  # type: ignore[attr-defined]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.4481, device='cuda:0')\n",
-      "tensor(0.1465, device='cuda:0')\n",
-      "tensor(0.0854, device='cuda:0')\n",
-      "tensor(0.0647, device='cuda:0')\n",
-      "tensor(0.0592, device='cuda:0')\n",
-      "tensor(0.0574, device='cuda:0')\n",
-      "tensor(0.0562, device='cuda:0')\n",
-      "tensor(0.0553, device='cuda:0')\n",
-      "tensor(0.0550, device='cuda:0')\n",
+      "tensor(0.5008, device='cuda:0')\n",
+      "tensor(0.1702, device='cuda:0')\n",
+      "tensor(0.0918, device='cuda:0')\n",
+      "tensor(0.0658, device='cuda:0')\n",
+      "tensor(0.0581, device='cuda:0')\n",
+      "tensor(0.0561, device='cuda:0')\n",
+      "tensor(0.0555, device='cuda:0')\n",
+      "tensor(0.0551, device='cuda:0')\n",
       "tensor(0.0546, device='cuda:0')\n",
-      "tensor(0.0544, device='cuda:0')\n",
-      "tensor(0.0543, device='cuda:0')\n"
+      "tensor(0.0544, device='cuda:0')\n"
      ]
     }
    ],
    "source": [
     "# Run the workflow for 100 steps\n",
     "t = time.time()\n",
-    "with profile(activities=[ProfilerActivity.CPU, ProfilerActivity.CUDA], record_shapes=True, profile_memory=True) as prof:\n",
-    "    for i in range(100):\n",
-    "        workflow.step()\n",
-    "        fit = workflow.algorithm.fit\n",
-    "        fit = fit[~torch.isnan(fit).any(dim=1)]\n",
-    "        if i % 9 == 0:\n",
-    "          print(igd(fit, pf))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(Optional) You can uncomment and execute the following code to print a table to view the hotspot functions."
+    "for i in range(100):\n",
+    "    workflow.step()\n",
+    "    fit = workflow.algorithm.fit\n",
+    "    fit = fit[~torch.isnan(fit).any(dim=1)]\n",
+    "    if i % 10 == 0:\n",
+    "        print(igd(fit, pf))"
    ]
   },
   {
@@ -136,15 +134,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(prof.key_averages().table())\n",
-    "# torch.cuda.synchronize()\n",
-    "# print(time.time() - t)"
+    "workflow.get_submodule(\"monitor\").plot()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "py_3.10",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
