--- a/docs/source/locale/zh/LC_MESSAGES/docs.po
+++ b/docs/source/locale/zh/LC_MESSAGES/docs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EvoX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-17 18:46+0800\n"
-"PO-Revision-Date: 2025-01-23 05:47+0000\n"
+"POT-Creation-Date: 2025-01-25 21:47+0800\n"
+"PO-Revision-Date: 2025-01-17 13:53+0000\n"
 "Last-Translator: BillHuang <bill.huang2001@gmail.com>\n"
 "Language-Team: Chinese (Simplified Han script) <https://hosted.weblate.org/"
 "projects/evox/evox/zh_Hans/>\n"
@@ -9070,11 +9070,11 @@ msgid "EvoX is available at PyPI and can be installed via:"
 msgstr "EvoX 可通过 PyPI 获取，并可通过以下方式安装："
 
 #: ../../source/guide/install/install.md:16
+#, fuzzy
 msgid ""
 "You can also assign extra options during the installation, currently "
-"available extras are `gymnasium`, `neuroevolution`, `envpool`, "
-"`distributed`, and `full`. For example, to install EvoX with all features, "
-"run the following command:"
+"available extras are `vis`, `neuroevolution`, `test`, `docs`. For example, "
+"to install EvoX with all features, run the following command:"
 msgstr ""
 "您还可以在安装过程中指定额外选项，目前可用的额外选项包括 "
 "`gymnasium`、`neuroevolution`、`envpool`、`distributed` 和 `full`。例如，要安装包含所有功能的 "
@@ -9661,7 +9661,7 @@ msgstr "🌐 **多功能优化套件**:"
 #: ../../source/index.md:44
 msgid ""
 "Cater to all your needs with both [Single-objective and Multi-"
-"objectiv](#algorithms) optimization capabilities."
+"objective](#algorithms) optimization capabilities."
 msgstr "满足您所有需求，包括[单目标和多目标](#algorithms)优化。"
 
 #: ../../source/index.md:45
