--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -109,7 +109,7 @@
     "import torch\n",
     "\n",
     "from evox.algorithms.pso_variants.pso import PSO\n",
-    "from evox.core import Algorithm, Mutable, Parameter, Problem, jit_class, trace_impl\n",
+    "from evox.core import Algorithm, Mutable, Parameter, Problem, trace_impl\n",
     "from evox.problems.hpo_wrapper import HPOFitnessMonitor, HPOProblemWrapper\n",
     "from evox.utils import TracingCond\n",
     "from evox.workflows import EvalMonitor, StdWorkflow"
