--- a/docs/source/locale/zh_CN/LC_MESSAGES/docs.po
+++ b/docs/source/locale/zh_CN/LC_MESSAGES/docs.po
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: BillHuang <bill.huang2001@gmail.com>\n"
 "Language-Team: Chinese (Simplified Han script) <https://hosted.weblate.org/"
 "projects/evox/evox/zh_Hans/>\n"
-"Language: zh\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
